# pascoal-programador

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOY.md  LICENSE  README.md  app.py  app_standalone.py  pyproject.toml  requirements.txt  requirements_deploy.txt
.github/workflows/: tests.yml
src/pasqalib/: cli.py  utils.py
src/pasqalib.egg-info/: SOURCES.txt
tests/: test_utils.py
